[package]
name = "tiny-narwhal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/bin/node/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[dependencies]
bytes = "1.0.0"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}